src/App.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.button {
  @apply p-2 text-white font-light rounded-md transition duration-200;
}

.button-primary {
  @apply bg-gradient-to-r from-[#FF5A5F] to-[#FF4C4F] hover:opacity-80;
}

.button-disabled {
  @apply bg-gray-400 cursor-not-allowed;
}

.form-container {
  @apply w-full max-w-full sm:max-w-sm md:max-w-md lg:max-w-lg bg-white p-4 sm:p-6 rounded-lg shadow-lg font-poppins;
}

.form-label {
  @apply block text-gray-700 mb-2;
}

.form-input {
  @apply w-full p-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500;
}

.error-message {
  @apply text-red-500 text-center mt-4;
}

body {
  @apply font-poppins;
}

.loading-text {
  @apply text-center p-4 sm:p-6;
}

.bg-black {
  background-color: rgba(0, 0, 0, 0.2);
}

.event-details-container {
  @apply w-full max-w-full sm:max-w-md md:max-w-lg lg:max-w-4xl mx-auto p-4 sm:p-6;
}

.event-title {
  @apply text-xl sm:text-2xl font-bold mb-4;
}

.event-datetime {
  @apply text-xs sm:text-sm text-gray-500 mb-2;
}

.event-image {
  @apply w-full sm:w-full lg:w-full max-w-full rounded-lg mb-4;
}

.event-description, 
.event-location,
.event-price {
  @apply text-gray-700 mb-4 sm:mb-6;
}

.staff-actions {
  @apply mb-4 sm:mb-6;
}

.registration-count {
  @apply text-gray-500 mb-2 sm:mb-4;
}

.button-container {
  @apply flex flex-col sm:flex-row items-center justify-between space-y-2 sm:space-y-0;
}

.button {
  @apply py-2 px-4 sm:py-3 sm:px-6 mb-4 mt-2 sm:mt-4;
}

.button-danger {
  @apply bg-red-600;
}

.button-danger:hover {
  @apply bg-red-500;
}

.registration-info {
  @apply mt-4 sm:mt-6;
}

.success-message {
  @apply mt-4 sm:mt-6 mb-4 sm:mb-6 font-bold text-black;
}

.payment-page-container {
  @apply w-full max-w-full sm:max-w-sm md:max-w-md lg:max-w-xl mx-auto p-4 sm:p-6;
}

.event-details {
  @apply text-center;
}

hr {
  @apply border-0 h-px bg-gray-300 my-6 sm:my-8;
}

.search-bar,
.sort-dropdown {
  @apply w-full sm:w-1/2 p-3 sm:p-4 text-gray-700 border border-gray-300 rounded-full shadow-sm focus:outline-none focus:ring-2 focus:ring-pink-500 transition duration-200 ease-in-out;
}

.search-sort-container {
  @apply flex flex-col sm:flex-row items-center justify-center space-y-2 sm:space-y-0 sm:space-x-4 w-full max-w-lg mb-4;
}

.search-bar:hover,
.sort-dropdown:hover {
  @apply border-red-500;
  border-color: #FF4C4F;
}

.strong-password-message {
  @apply text-green-500;
}


.link-button {
  @apply text-gray-700 py-2 px-4 rounded transition duration-200;
  max-width: 100%;
}

.link-button:hover {
  @apply bg-gray-200;
}

